<resources>
    <string name="app_name">My Movie List</string>
    <string name="sort_by">Sort by</string>
    <string name="movie_api_key">edfdcffbb59470137515a0f1b6d370b7</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="reviews_title">REVIEWS</string>
    <string name="reviews_empty">Review isn\'t available</string>
    <string name="casts_title">CASTS</string>
    <string name="casts_empty">Cast isn\'t available</string>
    <string name="crews_title">CREWS</string>
    <string name="crews_empty">Crew isn\'t available</string>
    <string name="trailer_title">TRAILER</string>
    <string name="trailer_empty">Trailer isn\'t available</string>
    <string name="movies_not_found">No movies are avaiable now.</string>
    <string name="about_creator">Ar Firman Syahputra</string>
    <string name="about_iak2016">Indonesia Android Kejar 2 (2016)</string>
    <string name="about_creator_email">ar.firman.syahputra@gmail.com</string>
    <string name="about_supported_title">Supported By :</string>
    <string name="movie_adult">Adult</string>
    <string name="menu_search_hint">Search Here</string>
    <string name="about_title">About</string>
    <string name="title_home">Home</string>
    <string name="title_about">About</string>
    <string name="title_share_movie">Share Movie</string>
    <string name="title_movies_now_playing">Now Playing</string>
    <string name="title_movies_popular">Popular</string>
    <string name="title_movies_top_rated">Top Rated</string>
    <string name="title_movies_coming_soon">Coming Soon</string>
    <string name="title_movie">Movie</string>
    <string name="title_tv_show">TV Show</string>
    <string name="title_tv_shows_airing_today">Airing Today</string>
    <string name="title_tv_shows_popular">Popular</string>
    <string name="title_tv_shows_top_rated">Top Rated</string>
    <string name="title_tv_shows_on_the_air">On The Air</string>
    <string name="title_people">People</string>
    <string name="title_peoples_popular">Popular</string>
    <string name="movie_header_title_sample">Movie Title</string>
    <string name="error_connection_text">Connection Problem. Please try again.</string>
    <string name="snackbar_okay">Okay</string>
    <string name="empty_movies">No Movies Available</string>
    <string name="empty_genres">No Genre Available</string>
    <string name="not_rated">Not Rated</string>
    <string name="empty_revenue">Revenue Not Recorded</string>
    <string name="empty_budget">Budget Not Recorded</string>
    <string name="empty_release_date">Release Date Unpublished</string>
    <string name="param_api_key">api_key</string>
    <string name="tv_show_header_title_sample">Tv Show Title</string>
    <string name="tv_shows_not_found">No tv shows are avaiable now</string>
    <string name="person_header_title_sample">Person Title</string>
    <string name="persons_not_found">No persons are avaiable now</string>
    <string name="empty_tv_shows">No Tv Shows Available</string>
    <string name="empty_persons">No Persons Available</string>
</resources>