<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_movie"
        android:title="@string/title_movie">
        <menu>
            <item
                android:id="@+id/nav_movies_now_playing"
                android:icon="@drawable/ic_movies"
                android:title="@string/title_movies_now_playing" />
            <item
                android:id="@+id/nav_movies_popular"
                android:icon="@drawable/ic_genre"
                android:title="@string/title_movies_popular" />
            <item
                android:id="@+id/nav_movies_top_rated"
                android:icon="@drawable/ic_rating"
                android:title="@string/title_movies_top_rated" />
            <item
                android:id="@+id/nav_movies_coming_soon"
                android:icon="@drawable/ic_release_date"
                android:title="@string/title_movies_coming_soon" />
        </menu>
    </item>
    <item
        android:id="@+id/nav_tv_show"
        android:title="@string/title_tv_show">
        <menu>
            <item
                android:id="@+id/nav_tv_shows_airing_today"
                android:icon="@drawable/ic_movies"
                android:title="@string/title_tv_shows_airing_today" />
            <item
                android:id="@+id/nav_tv_shows_on_the_air"
                android:icon="@drawable/ic_release_date"
                android:title="@string/title_tv_shows_on_the_air" />
            <item
                android:id="@+id/nav_tv_shows_popular"
                android:icon="@drawable/ic_genre"
                android:title="@string/title_tv_shows_popular" />
            <item
                android:id="@+id/nav_tv_shows_top_rated"
                android:icon="@drawable/ic_rating"
                android:title="@string/title_tv_shows_top_rated" />
        </menu>
    </item>
    <item
        android:id="@+id/nav_people"
        android:title="@string/title_people">
        <menu>
            <item
                android:id="@+id/nav_peoples_popular"
                android:icon="@drawable/ic_movies"
                android:title="@string/title_peoples_popular" />
        </menu>
    </item>
    <item
        android:id="@+id/nav_about"
        android:icon="@drawable/ic_about"
        android:title="@string/title_about" />
</menu>